[package]
name = "bot"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = { version="0.43.0", features = ["all-nips"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
chrono = { version = "0.4.23", features = ["serde"] }
time = "0.3.20"
serde_json = "1.0.94"
rusqlite = "0.37.0"
whatlang = "0.16.2"
dotenv = "0.15.0"
regex = "1.7.1"
openai-api-rs = "6.0.8"
lightning-invoice = "0.33.2"
csv = "1.3.0"
