[package]
name = "bot"
version = "0.1.2"
edition = "2021"
default-run = "bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr-sdk = { version="0.43.0", features = ["all-nips"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
chrono = { version = "0.4.23", features = ["serde"] }
time = "0.3.20"
serde_json = "1.0.94"
axum = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
whatlang = "0.18.0"
dotenv = "0.15.0"
regex = "1.7.1"
openai-api-rs = "7.0.0"
lightning-invoice = "0.33.2"
csv = "1.3.0"
tiktoken-rs = "0.7.0"
partial-json-fixer = "0.5.3"
